Insere a luz de fundo no título da página, coloca a partial welcome da landing no local ideal, remove overflow desnecessário do content-body, reescreve valor do padding seguindo padrão para 2 valores, define variável para padding vertical e horizontal padrões do content-body, remove largura fixa para a partial de benefícios

--- a/public/stylesheets/scss/_authoring-benefits.scss
+++ b/public/stylesheets/scss/_authoring-benefits.scss
@@ -1,11 +1,12 @@
 .landing-advantages .landing-navigation-title { margin: 0; }
 
 .benefits {
-  padding: 20px 40px 20px 40px;
-  max-width: 858px;
+  padding: $authoring-content-vertical-padding $authoring-content-horizontal-padding;
 
   .type-user {
-    max-width: 860px;
+    max-width: -webkit-calc(100% - 80px);
+    max-width: -moz-calc(100% - 80px);
+    max-width: calc(100% - 80px);
     float: left;
 
     .button-user{
