--- a/public/stylesheets/scss/_authoring-projects.scss
+++ b/public/stylesheets/scss/_authoring-projects.scss
@@ -1,5 +1,5 @@
 .projects-table {
-  padding: 20px 40px 20px 40px;
+  padding: $authoring-content-vertical-padding $authoring-content-horizontal-padding;
 
   h3 { margin: 40px 0 0 0; }
 
