--- a/public/stylesheets/scss/_authoring-title.scss
+++ b/public/stylesheets/scss/_authoring-title.scss
@@ -1,12 +1,14 @@
-.welcome-authoring {
+.title-authoring {
   padding-top: 60px;
   background-image: url("../images/light.png");
   background-repeat: no-repeat;
   background-position: 0;
 
-  .authoring-call {
+  .title-call { font-weight: 500; }
+
+  .subtitle-call {
     color: $gray6;
-    padding-bottom: 20px;
+    margin-top: 20px;
     font-family: $museo-sans-rounded;
   }
 
